--- a/src/App.scss
+++ b/src/App.scss
@@ -14,7 +14,7 @@
   > span {
     flex: 1;
     margin: auto 1.5vmax;
-    
+
     > p {
     font-size: 2.5vmax;
     }
@@ -33,7 +33,7 @@
   background: whitesmoke;
 }
 
-#calculator, #display{ 
+#calculator, #display{
   padding: 4vmin;
 }
 
@@ -78,6 +78,9 @@
   overflow: hidden;
   margin-bottom: 4vmin;
 }
+#display.error{
+  background: red;
+}
 // operators styling
 #add, #subtract, #multiply, #divide, #clear {
   font-weight: 900;
@@ -96,7 +99,7 @@
   grid-column: 1/2;
 }
 
-#eight, #five, #two { 
+#eight, #five, #two {
   grid-column: 2/3;
 }
 
@@ -109,7 +112,7 @@
 }
 
 #one, #two, #three {
-  grid-row: 5/6;  
+  grid-row: 5/6;
 }
 
 #zero, #decimal {
@@ -138,11 +141,11 @@
   #container {
     flex-direction: column;
   }
-  
+
   .btn {
     margin-bottom: 6vmax;
   }
-  
+
   p {
     text-align: center;
   }
